--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "airtable": "^0.11.2",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "mongod": "^2.0.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.1",
