--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "mongod": "^2.0.0",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.8",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "17.0.2"
