--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.3",
     "airtable": "^0.11.2",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
