--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "airtable": "^0.11.2",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "mongod": "^2.0.0",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.8",
